# quick-edits

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: static.yml
public/: index.html  main.js  style.css
src/: index.html  index.js  lib.rs  style.css
