[package]
name = "quick-edits"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
base64 = "0.13.0"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = ["console"]

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["jpeg", "png"]